# live-mpl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/root/: animate.rst  exceptions.rst  live_base.rst  live_comet.rst  live_fancy_bbox.rst  live_image.rst  live_line.rst  live_rectangle.rst  live_vehicle.rst  live_vline.rst  tab.rst  window.rst
examples/: animation_example.py  comet_example.py  fancy_bbox_example.py  image_animation_example.py  image_example.py  rectangle_example.py  simple_example.py  stackbar_example.py  vehicle_example.py  vline_example.py
live_mpl/: __init__.py  animate.py  exceptions.py  live_base.py  live_circle.py  live_comet.py  live_fancy_bbox.py  live_image.py  live_line.py  live_quiver.py  live_rectangle.py  live_stackbar.py  live_streamlines.py  live_vehicle.py  live_vline.py  scaling.py  streamplot.py  tab.py  window.py
tests/: manual_stackbar_test.py  skip_test_live_stackbar.py  skip_test_live_vline.py  test_live_base.py  test_live_line.py
