[tool.poetry]
name = "live_mpl"
version = "0.2.0"
description = "Interactive plotting with matplotlib and GTK3"
authors = ["John Talbot <jtalbot.me@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.8.0"
numpy = "^1.24.2"
pycairo = "^1.23.0"
PyGObject = "^3.44.1"
rich = "^13.3.5"
pillow = "^9.5.0"
seaborn = "^0.12.2"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.4"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.23.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"